--- a/hangman/style.css
+++ b/hangman/style.css
@@ -2,14 +2,15 @@
 body {
   font-family:'Lato', sans-serif;
   line-height: 1.4em;
-  background: #f29950;
+  background: #c0bdba;
   color: #444;
   padding: 2em;
 }
 
-h1 { font-size: 2em; margin: .67em 0 }
-h2 { font-size: 1.5em; margin: .75em 0 }
-h3 { font-size: 1.17em; margin: .83em 0 }
+h1 { font-size: 4em; color:#821111 ;margin: .67em 0; text-align: center; font-family: 'Nosifer', cursive; }
+h2 {
+  font-size: 1.5em; margin: .75em 0; text-align: center; }
+h3 { font-size: 1.17em; margin: .83em 0; text-align: center; }
 h5 { font-size: .83em; margin: 1.5em 0 }
 h6 { font-size: .75em; margin: 1.67em 0 }
 h1, h2, h3, h4,
@@ -17,9 +18,10 @@ h5, h6 {
   font-weight: bolder
 }
 
-p {
+.guess-wrapper {
   line-height: 1.4em;
   margin-bottom: 1em;
+  text-align: center;
 }
 
 a {
@@ -33,5 +35,38 @@ button, input, select, textarea {
   border-radius: .4em;
   height: 3em;
   font-family: 'Lato', sans-serif;
+  display: block;
 
+
+}
+
+input {
+  width: 3em;
+  font-size: 2em;
+  padding: 0;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 1em;
+  background-color: grey;
+  font-family: memory-header;
+  color: red;
+
+}
+
+input:active {
+  font-family: 'Nosifer', cursive;
+
+}
+button {
+  margin: 0 auto;
+  width: 12em;
+  height: 3.5em;
+  background-color: black;
+  color:#821111;
+  font-family: 'Nosifer', cursive;
+}
+
+.game-wrapper {
+  width: 65em;
+  margin: 0 auto;
 }
